[package]
name = "esdt-faucet-sc"
version = "0.5.0"
authors = ["Julian Ćwirko <julian.io>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.47.5"

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.5"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
