[package]
name = "esdt-faucet-sc-wasm"
version = "0.2.0"
authors = ["Julian Ćwirko <julian.cwirko@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib",]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.esdt-faucet-sc]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.38.0"

[dependencies.elrond-wasm-output]
version = "0.38.0"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
